# AtomicHabits

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_start_time.py  0003_alter_habit_options.py  0004_alter_habit_user.py  0005_alter_habit_action_time.py  0006_remove_habit_is_connected.py  0007_habit_connected_habit.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_remove_user_tg_nick_user_tg_chat_id.py
